cf/ec2_vpc_peering_1subnet.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "VPC Peering test",
  "Parameters":{
    "VPCCIDR":{
      "Type": "String",
      "Default": "10.70.12.0/26"
    },
    "Subnet1CIDR":{
      "Type": "String",
      "Default": "10.70.12.0/26"
    },
    "ImageId":{
      "Type": "String",
      "Default": "ami-f90db999"
    },
    "KeyPair":{
      "Type": "String",
      "Default": "ic-beta2-uswest2-coke_dev"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties" : {
        "CidrBlock": { "Ref": "VPCCIDR"}
      }
    },
    "InternetGateway":{
      "Type": "AWS::EC2::InternetGateway"
    },
    "IGVPCAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {"Ref": "InternetGateway"},
        "VpcId": {"Ref": "VPC"}
      }
    },
    "RouteTable":{
      "Type": "AWS::EC2::RouteTable",
      "Properties":{
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "Route":{
      "Type": "AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        },
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      }
    },
    "Subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {"Ref": "Subnet1CIDR"},
        "VpcId": {"Ref": "VPC"},
        "MapPublicIpOnLaunch": "true"
      }
    },
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription": "SSH access",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "Instance1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {"Ref": "ImageId"},
        "InstanceType": "t1.micro",
        "SubnetId": {
          "Ref": "Subnet1"
        },
        "Tags": [
          {"Key": "Name", "Value": "Instance1-sub1" }
        ],
        "KeyName": {"Ref": "KeyPair"},
        "SecurityGroupIds": [
          {"Ref": "SecurityGroup"}
        ]
      }
    },
    "Instance2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {"Ref": "ImageId"},
        "InstanceType": "t1.micro",
        "SubnetId": {
          "Ref": "Subnet1"
        },
        "Tags": [
          {"Key": "Name", "Value": "Instance2-sub1" }
        ],
        "KeyName": {"Ref": "KeyPair"},
        "SecurityGroupIds": [
          {"Ref": "SecurityGroup"}
        ]
      }
    }
  }
}
